fix: user message border due to overflow

--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,7 @@
   }
 }
 
-/* table,
-tr,
-td,
-th {
-  border: 1px solid #555;
-} */
-
+/* table elements */
 table {
   border-collapse: collapse;
   margin: 25px 0;
@@ -79,84 +73,4 @@ table tbody tr:last-of-type {
 table tbody tr.active-row {
   font-weight: bold;
   color: #009879;
-}
-
-code {
-  font-family: monospace;
-}
-
-p > code,
-li > code,
-dd > code,
-td > code {
-  background: #ffeff0;
-  word-wrap: break-word;
-  box-decoration-break: clone;
-  padding: 0.1rem 0.3rem 0.2rem;
-  border-radius: 0.2rem;
-}
-
-pre code {
-  display: block;
-  color: #000;
-  background: #eeeeee;
-  white-space: pre;
-  -webkit-overflow-scrolling: touch;
-  overflow-x: scroll;
-  max-width: 100%;
-  min-width: 100px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-/* styling hyperlink */
-a :not(.openai-anchor-tag) {
-  color: #0077cc;
-  text-decoration: none;
-  border-bottom: 2px solid #0077cc;
-  transition: border-bottom 0.2s ease-in-out;
-}
-/* On hover */
-a:hover :not(.openai-anchor-tag) {
-  color: #004466;
-  border-bottom: 2px solid #004466;
-}
-
-/* When visited */
-a:visited :not(.openai-anchor-tag) {
-  color: #6600cc;
-}
-
-/* When active */
-a:active :not(.openai-anchor-tag) {
-  color: #ff6600;
-}
-
-/* When focused */
-a:focus :not(.openai-anchor-tag) {
-  outline: none;
-  box-shadow: 0 0 0 1px #ccc;
-}
-
-/* copy codeblock to clipboard button */
-.code-pre {
-  padding-top: 0px;
-  margin-bottom: 3em !important;
-  position: relative;
-}
-
-.code-copy-btn {
-  color: white;
-  position: absolute;
-  right: 10px;
-  top: 2%;
-  font-size: 1.6em;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  opacity: 0.9;
-}
-
-.code-copy-btn:hover {
-  transform: scale(1.2);
-  opacity: 1;
 }
